2014-11-16  51  Don't rely on GUIDs, initial tagged bookmark import implementation.
2015-02-24  56  Worked on importer and imported preview dialog.
2015-02-26  56  Preview dialog functions mostly working.
2015-03-19  56  Import logic complete, but real processing is still to happen.
2015-03-21  58  MHT Saving url getting logic done, file parsers and mht format remaining.
2015-03-22  57  MHT Saving done.
2015-09-16  68  Prepare for new dev streak, added to-dos from vt.
2015-09-21  68  File layouts for file archives, the new file layout with hints.
2015-09-22  55  TODO Smashing
2015-09-23  41  TODO Smashing
2015-09-24  32  TODO Smashing
2015-09-26  19  TODO Smashing
2015-09-27  15  Import Improvements
2015-09-29  15  Import bugfix
2015-09-30  16  Import bug finally fixed!
2015-10-01  17  Fixing import preview dialog
2015-10-02  16  MHTSaver bugfixes
2015-10-03  16  Bookmark importer and preview dlg bugfixes
2015-10-04  15  Import bookmarks together with processing
2015-10-07  14  [1.0] Begin using the program finally. From now on project structure changes, and
                release archives and descriptions will be less frequently made and updated.
2016-08-21  18  [1.1] Implemented bookmark folders, New file archive layout.
                Other changes include:
                + DB Migrations
                + Allow saving files with Unicode names in a new Options dialog; FAM refactoring.
                + Open Link In New Window in (M)HTML files views opens links in default browser
                + Add Bookmark From URL directly
                ! Correct filter refreshing on bookmark add/delete
                ! Fixed status labels counting and updates
                ! Fixed viewing files with percent-encoded chars in their names
                ! Fixed HTML character entities in saved MHT titles
2016-08-22  19  [Unreleased] Migrate to Qt 5.7, VS2015, and to QtWebEngine instead of QtWebKit.