@@ -84,3 +84,6 @@
                 ! Fixed viewing files with percent-encoded chars in their names
                 ! Fixed HTML character entities in saved MHT titles
 2016-08-22  19  [Unreleased] Migrate to Qt 5.7, VS2015, and to QtWebEngine instead of QtWebKit.
+                + Simple text and regexp search
+                + Ability of showing bookmarks in all folders
+                ! Code improvements and bugfixes
